kick pointless nominalCursor calculation

likely just copypasta from a broken kcm and gets
us a wrong dimensioned cursor texture

BUG: 310497
FIXED-IN: 4.10